# BufferedSocket

./: BufferedSocket.cpp  BufferedSocket.h  CMakeLists.txt  README.md
.github/workflows/: build_check.yml
DEBIAN/: control
debian/: changelog  control  copyright  rules
include/: BufferedSocket.h  DataPacket.h
include/BufferedSocket/: BufferedSocket.h  BufferedSocketDefs.h  DataPacket.h
src/: BufferedSocket.cpp  DataPacket.cpp
test/: test.cpp
